Integrated Bootstrap into index.html, linked stylesheets and added font files

--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
     <meta name="description" content="ADD DESCRIPTION HERE --------">
     <meta author="Dina Olufsen">
     <title>Pearls</title>
+    <link rel="stylesheet" href="./dist/css/styles.css">
 </head>
 <body>
-    
+    <header class="row navbar bg-primary">
+        <a href="./index.html" class="col">
+            <!-- <img src="./assets/images/"> -->
+            <span>Pearls</span>
+        </a>
+        <div class="col"></div>
+    </header>
+    <main></main>
+    <footer></footer>
+    <script defer src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
