--- a/listing.html
+++ b/listing.html
@@ -4,7 +4,79 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="ADD DESCRIPTION HERE --------" />
+    <meta author="Dina Olufsen" />
+    <title>Pearls | listing</title>
+    <link rel="stylesheet" href="./dist/css/styles.css" />
   </head>
-  <body></body>
+  <body
+    id="listing"
+    class="d-flex flex-column justify-content-between min-vh-100"
+  >
+    <header class="d-flex navbar bg-dark justify-content-between">
+      <div class="row navbar-brand align-items-center mx-0 w-75">
+        <a
+          href="./index.html"
+          class="col-3 col-sm-5 col-lg-4 col-xxl-3 d-flex align-items-center text-decoration-none"
+        >
+          <img src="./assets/icons/light-pearl-icon.png" id="brand-icon" />
+          <span
+            id="brand-name"
+            class="d-none d-sm-block h1 mb-0 mt-2 ms-2 text-light text-uppercase"
+            >Pearls</span
+          >
+        </a>
+        <!-- <div class="col-8 col-sm-6 col-md-5 col-lg-4 col-xxl-3">
+            <form
+              class="d-flex bg-secondary rounded h-100 p-1 align-items-center"
+              onsubmit=""
+            >
+              <img
+                src="./assets/icons/search-icon.png"
+                id="header-search-icon"
+                class="search-icon p-0"
+              />
+              <input class="bg-secondary search-input form-control" />
+            </form>
+          </div> -->
+      </div>
+      <div class="d-flex nav-item dropdown w-25 justify-content-end">
+        <!-- <a
+            class="nav-link dropdown-toggle me-3"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            <img
+              src="./assets/icons/profile-icon.png"
+              alt="Empty profile picture, as well as dropdown menu"
+              id="header-profile-icon"
+            />
+          </a>
+          <ul
+            class="dropdown-menu dropdown-menu-end"
+            aria-labelledby="dropdownAccountButton"
+          >
+            <li><a class="dropdown-item" href="/profile.html">Profile</a></li>
+            <li><a class="dropdown-item" href="">Log Out</a></li>
+          </ul> -->
+        <a
+          class="btn btn-primary me-2 text-secondary border border-secondary"
+          href="./login.html"
+          >Log in</a
+        >
+      </div>
+    </header>
+    <main></main>
+    <footer
+      class="bg-dark d-flex justify-content-between align-items-center py-2 px-4 text-light"
+    >
+      <div class="fs-6">© Dina Olufsen - 2022</div>
+      <div class="fs-3">🡱</div>
+    </footer>
+    <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  </body>
 </html>
