--- a/login.html
+++ b/login.html
@@ -9,11 +9,11 @@
     <title>Pearls | Log in</title>
     <link rel="stylesheet" href="./dist/css/styles.css" />
   </head>
-  <body id="login" class="min-vh-100 overflow-hidden position-relative">
+  <body id="login" class="d-flex flex-column justify-content-between min-vh-100">
     <header class="d-flex navbar bg-dark justify-content-between">
-      <div class="row navbar-brand align-items-center mx-0 w-75">
+      <div class="row navbar-brand align-items-center mx-0">
         <a
-          href="./index.html"
+          href="./welcome.html"
           class="col-3 col-sm-5 col-lg-4 col-xxl-3 d-flex align-items-center text-decoration-none"
         >
           <img src="./assets/icons/light-pearl-icon.png" id="brand-icon" />
@@ -37,7 +37,7 @@
             </form>
           </div> -->
       </div>
-      <div class="d-flex nav-item dropdown w-25 justify-content-end">
+      <div class="d-flex nav-item dropdown w-50 justify-content-end">
         <!-- <a
             class="nav-link dropdown-toggle me-3"
             href="#"
@@ -61,36 +61,59 @@
           </ul> -->
         <a
           class="btn btn-primary me-2 text-secondary border border-secondary"
-          href="./login.html"
-          >Log in</a
+          href="./signup.html"
+          >Sign up</a
         >
       </div>
     </header>
     <main>
-      <div class="container position-relative">
-        <div class="row d-flex justify-content-center mt-5">
-          <form class="col-6 card bg-dark text-light p-5">
-            <h1 class="fs-2 text-uppercase">Log in</h1>
-            <label class="fs-4 mt-4" for="emailInput">E-mail</label>
-            <input id="emailInput" class="bg-secondary p-1 rounded" />
-            <div class="text-secondary">Please enter your e-mail address</div>
-            <label class="fs-4 mt-4" for="emailInput">E-mail</label>
-            <input id="emailInput" class="bg-secondary p-1 rounded" />
-            <div class="text-secondary">Please enter your e-mail address</div>
+      <div class="container position-relative mb-5">
+        <div class="row d-flex justify-content-center mt-2">
+          <form
+            class="col-11 col-md-8 col-lg-6 card bg-dark text-light p-5 mh-100"
+          >
+            <h1 class="fs-2 text-uppercase mb-4">Log in</h1>
+            <label class="fs-5" for="emailInput">E-mail</label>
+            <input
+              id="emailInput"
+              type="email"
+              class="bg-secondary p-1 rounded form-control"
+            />
+            <div id="mailFeedback" class="text-secondary">Please enter your e-mail address</div>
+            <label class="fs-5 mt-3" for="passwordInput">Password</label>
+            <input
+              id="passwordInput"
+              type="password"
+              class="bg-secondary p-1 rounded form-control"
+            />
+            <div id="passwordFeedback" class="text-secondary">Please enter your password</div>
+            <div class="form-check mt-3">
+              <input
+                id="rememberCheck"
+                type="checkbox"
+                class="form-check-input me-2"
+              />
+              <label
+                class="form-check-label text-secondary fs-6"
+                for="rememberCheck"
+                >Remember me</label
+              >
+            </div>
             <button
-              class="btn btn-primary text-secondary border border-secondary"
+              class="btn btn-primary text-secondary border border-secondary align-self-center mt-3 px-5"
             >
               Log in
             </button>
-            <div>
+            <div class="text-center mt-2">
               Don't have a user yet?
-              <a href="./signup.html" class="text-secondary">Sign up!</a>
+              <a href="./signup.html">Sign up!</a>
             </div>
           </form>
         </div>
       </div>
       <div id="bg-image" class="position-absolute top-0 end-0"></div>
     </main>
+    <footer class="mt-5"></footer>
     <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
