--- a/signup.html
+++ b/signup.html
@@ -9,14 +9,11 @@
     <title>Pearls | Sign up</title>
     <link rel="stylesheet" href="./dist/css/styles.css" />
   </head>
-  <body
-    id="signup"
-    class="d-flex flex-column justify-content-between min-vh-100"
-  >
+  <body id="signup" class="d-flex flex-column justify-content-between min-vh-100">
     <header class="d-flex navbar bg-dark justify-content-between">
-      <div class="row navbar-brand align-items-center mx-0 w-75">
+      <div class="row navbar-brand align-items-center mx-0">
         <a
-          href="./index.html"
+          href="./welcome.html"
           class="col-3 col-sm-5 col-lg-4 col-xxl-3 d-flex align-items-center text-decoration-none"
         >
           <img src="./assets/icons/light-pearl-icon.png" id="brand-icon" />
@@ -40,7 +37,7 @@
             </form>
           </div> -->
       </div>
-      <div class="d-flex nav-item dropdown w-25 justify-content-end">
+      <div class="d-flex nav-item dropdown w-50 justify-content-end">
         <!-- <a
             class="nav-link dropdown-toggle me-3"
             href="#"
@@ -69,13 +66,52 @@
         >
       </div>
     </header>
-    <main></main>
-    <footer
-      class="bg-dark d-flex justify-content-between align-items-center py-2 px-4 text-light"
-    >
-      <div class="fs-6">© Dina Olufsen - 2022</div>
-      <div class="fs-3">🡱</div>
-    </footer>
+    <main>
+      <div class="container position-relative mb-5">
+        <div class="row d-flex justify-content-center mt-2">
+          <form
+            class="col-11 col-md-8 col-lg-6 card bg-dark text-light p-5 mh-100"
+          >
+            <h1 class="fs-2 text-uppercase mb-4">Sign up</h1>
+            <label class="fs-5" for="nameInput">Username</label>
+            <input
+              id="nameInput"
+              type="email"
+              class="bg-secondary p-1 rounded form-control"
+            />
+            <div id="nameFeedback" class="text-secondary">Please enter an unused username</div>
+            <label class="fs-5 mt-3" for="emailInput">E-mail</label>
+            <input
+              id="emailInput"
+              type="email"
+              class="bg-secondary p-1 rounded form-control"
+            />
+            <div id="mailFeedback" class="text-secondary">Please enter a valid student Noroff 
+              E-mail <br>(ending in @stud.noroff.no)</div>
+
+            <label class="fs-5 mt-3" for="passwordInput">Password</label>
+            <input
+              id="passwordInput"
+              type="password"
+              class="bg-secondary p-1 rounded form-control"
+            />
+            <div id="passwordFeedback" class="text-secondary">Please enter a valid password 
+              <br>(containing at least 1 capital letter and 1 number)</div>
+            <button
+              class="btn btn-primary text-secondary border border-secondary align-self-center mt-3 px-5"
+            >
+              Sign up
+            </button>
+            <div class="text-center mt-2">
+              Already have a user?
+              <a href="./login.html">Log in!</a>
+            </div>
+          </form>
+        </div>
+      </div>
+      <div id="bg-image" class="position-absolute top-0 end-0"></div>
+    </main>
+    <footer class="mt-5"></footer>
     <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
