--- a/welcome.html
+++ b/welcome.html
@@ -69,7 +69,7 @@
         >
       </div>
     </header>
-    <main class="row flex-row-reverse min-vh-100">
+    <main class="row flex-row-reverse min-vh-100 overflow-hidden">
       <div
         id="big-image"
         class="col-8 col-md-5 position-relative overflow-hidden"
@@ -82,7 +82,7 @@
       </div>
       <div
         id="welcome-text"
-        class="col-12 col-md-6 text-end h-75 me-5 d-flex flex-column justify-content-evenly"
+        class="col-12 col-md-6 text-end h-75 me-5 ps-4 d-flex flex-column justify-content-evenly"
       >
         <h1 class="text-light text-uppercase">Welcome to Pearls</h1>
         <div class="d-flex flex-column ms-auto w-75 align-items-end">
@@ -104,7 +104,7 @@
         </div>
         <div
           id="welcome-login"
-          class="d-flex flex-column align-items-end ms-auto h-25 justify-content-end"
+          class="d-flex flex-column align-items-center ms-auto h-25 justify-content-end"
         >
           <h2 class="text-light text-uppercase">
             Log in
