--- a/login.html
+++ b/login.html
@@ -9,7 +9,10 @@
     <title>Pearls | Log in</title>
     <link rel="stylesheet" href="./dist/css/styles.css" />
   </head>
-  <body id="login" class="d-flex flex-column justify-content-between min-vh-100">
+  <body
+    id="login"
+    class="d-flex flex-column justify-content-between min-vh-100"
+  >
     <header class="d-flex navbar bg-dark justify-content-between">
       <div class="row navbar-brand align-items-center mx-0">
         <a
@@ -79,14 +82,18 @@
               type="email"
               class="bg-secondary p-1 rounded form-control"
             />
-            <div id="mailFeedback" class="text-secondary">Please enter your e-mail address</div>
+            <div id="mailFeedback" class="text-secondary">
+              Please enter your e-mail address
+            </div>
             <label class="fs-5 mt-3" for="passwordInput">Password</label>
             <input
               id="passwordInput"
               type="password"
               class="bg-secondary p-1 rounded form-control"
             />
-            <div id="passwordFeedback" class="text-secondary">Please enter your password</div>
+            <div id="passwordFeedback" class="text-secondary">
+              Please enter your password
+            </div>
             <div class="form-check mt-3">
               <input
                 id="rememberCheck"
