--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
             >Pearls</span
           >
         </a>
-        <!-- <div class="col-8 col-sm-6 col-md-5 col-lg-4 col-xxl-3">
-            <form
-              class="d-flex bg-secondary rounded h-100 p-1 align-items-center"
-              onsubmit=""
-            >
-              <img
-                src="./assets/icons/search-icon.png"
-                id="header-search-icon"
-                class="search-icon p-0"
-              />
-              <input class="bg-secondary search-input form-control" />
-            </form>
-          </div> -->
+        <div class="col-8 col-sm-6 col-md-5 col-lg-4 col-xxl-3">
+          <form
+            class="d-flex bg-secondary rounded h-100 p-1 align-items-center"
+            onsubmit=""
+          >
+            <img
+              src="./assets/icons/search-icon.png"
+              id="header-search-icon"
+              class="search-icon p-0"
+            />
+            <input class="bg-secondary search-input form-control" />
+          </form>
+        </div>
       </div>
       <div class="d-flex nav-item dropdown w-25 justify-content-end">
         <!-- <a
