--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,10 @@
     <title>Pearls | Sign up</title>
     <link rel="stylesheet" href="./dist/css/styles.css" />
   </head>
-  <body id="signup" class="d-flex flex-column justify-content-between min-vh-100">
+  <body
+    id="signup"
+    class="d-flex flex-column justify-content-between min-vh-100"
+  >
     <header class="d-flex navbar bg-dark justify-content-between">
       <div class="row navbar-brand align-items-center mx-0">
         <a
@@ -79,15 +82,19 @@
               type="email"
               class="bg-secondary p-1 rounded form-control"
             />
-            <div id="nameFeedback" class="text-secondary">Please enter an unused username</div>
+            <div id="nameFeedback" class="text-secondary">
+              Please enter an unused username
+            </div>
             <label class="fs-5 mt-3" for="emailInput">E-mail</label>
             <input
               id="emailInput"
               type="email"
               class="bg-secondary p-1 rounded form-control"
             />
-            <div id="mailFeedback" class="text-secondary">Please enter a valid student Noroff 
-              E-mail <br>(ending in @stud.noroff.no)</div>
+            <div id="mailFeedback" class="text-secondary">
+              Please enter a valid student Noroff E-mail <br />(ending in
+              @stud.noroff.no)
+            </div>
 
             <label class="fs-5 mt-3" for="passwordInput">Password</label>
             <input
@@ -95,8 +102,10 @@
               type="password"
               class="bg-secondary p-1 rounded form-control"
             />
-            <div id="passwordFeedback" class="text-secondary">Please enter a valid password 
-              <br>(containing at least 1 capital letter and 1 number)</div>
+            <div id="passwordFeedback" class="text-secondary">
+              Please enter a valid password <br />(containing at least 1 capital
+              letter and 1 number)
+            </div>
             <button
               class="btn btn-primary text-secondary border border-secondary align-self-center mt-3 px-5"
             >
