started coding search listings and added some IDs

--- a/listing.html
+++ b/listing.html
@@ -36,7 +36,7 @@
                 id="header-search-icon"
                 class="search-icon p-0"
               />
-              <input class="bg-secondary search-input form-control" />
+              <input id="searchInput" class="bg-secondary search-input form-control" />
             </form>
           </div> -->
       </div>
@@ -74,7 +74,7 @@
       class="bg-dark d-flex justify-content-between align-items-center py-2 px-4 text-light"
     >
       <div class="fs-6">© Dina Olufsen - 2022</div>
-      <div class="fs-3">🡱</div>
+      <div id="arrowUp" class="fs-3">🡱</div>
     </footer>
     <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
