--- a/welcome.html
+++ b/welcome.html
@@ -99,7 +99,10 @@
               id="search-icon"
               class="search-icon p-0"
             />
-            <input class="bg-secondary search-input form-control" />
+            <input
+              id="searchInput"
+              class="bg-secondary search-input form-control"
+            />
           </form>
         </div>
         <div
