--- a/index.html
+++ b/index.html
@@ -36,37 +36,40 @@
               id="header-search-icon"
               class="search-icon p-0"
             />
-            <input class="bg-secondary search-input form-control" />
+            <input
+              id="searchInput"
+              class="bg-secondary search-input form-control"
+            />
           </form>
         </div>
       </div>
       <div class="d-flex nav-item dropdown w-25 justify-content-end">
-        <!-- <a
-            class="nav-link dropdown-toggle me-3"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-haspopup="true"
-            aria-expanded="false"
-          >
-            <img
-              src="./assets/icons/profile-icon.png"
-              alt="Empty profile picture, as well as dropdown menu"
-              id="header-profile-icon"
-            />
-          </a>
-          <ul
-            class="dropdown-menu dropdown-menu-end"
-            aria-labelledby="dropdownAccountButton"
-          >
-            <li><a class="dropdown-item" href="/profile.html">Profile</a></li>
-            <li><a class="dropdown-item" href="">Log Out</a></li>
-          </ul> -->
         <a
+          class="nav-link dropdown-toggle me-3"
+          href="#"
+          role="button"
+          data-bs-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          <img
+            src="./assets/icons/profile-icon.png"
+            alt="Empty profile picture, as well as dropdown menu"
+            id="header-profile-icon"
+          />
+        </a>
+        <ul
+          class="dropdown-menu dropdown-menu-end"
+          aria-labelledby="dropdownAccountButton"
+        >
+          <li><a class="dropdown-item" href="/profile.html">Profile</a></li>
+          <li><a class="dropdown-item" href="">Log Out</a></li>
+        </ul>
+        <!-- <a
           class="btn btn-primary me-2 text-secondary border border-secondary"
           href="./login.html"
           >Log in</a
-        >
+        > -->
       </div>
     </header>
     <main></main>
@@ -74,7 +77,7 @@
       class="bg-dark d-flex justify-content-between align-items-center py-2 px-4 text-light"
     >
       <div class="fs-6">© Dina Olufsen - 2022</div>
-      <div class="fs-3">🡱</div>
+      <div id="arrowUp" class="fs-3">🡱</div>
     </footer>
     <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
