--- a/search.html
+++ b/search.html
@@ -9,10 +9,7 @@
     <title>Pearls | Search</title>
     <link rel="stylesheet" href="./dist/css/styles.css" />
   </head>
-  <body
-    id="search"
-    class="d-flex flex-column justify-content-between min-vh-100"
-  >
+  <body id="search" class="d-flex flex-column min-vh-100">
     <header class="d-flex navbar bg-dark justify-content-between">
       <div class="row navbar-brand align-items-center mx-0 w-75">
         <a
@@ -26,19 +23,22 @@
             >Pearls</span
           >
         </a>
-        <!-- <div class="col-8 col-sm-6 col-md-5 col-lg-4 col-xxl-3">
-            <form
-              class="d-flex bg-secondary rounded h-100 p-1 align-items-center"
-              onsubmit=""
-            >
-              <img
-                src="./assets/icons/search-icon.png"
-                id="header-search-icon"
-                class="search-icon p-0"
-              />
-              <input class="bg-secondary search-input form-control" />
-            </form>
-          </div> -->
+        <div class="col-8 col-sm-6 col-md-5 col-lg-4 col-xxl-3">
+          <form
+            class="d-flex bg-secondary rounded h-100 p-1 align-items-center"
+            onsubmit=""
+          >
+            <img
+              src="./assets/icons/search-icon.png"
+              id="header-search-icon"
+              class="search-icon p-0"
+            />
+            <input
+              id="searchInput"
+              class="bg-secondary search-input form-control"
+            />
+          </form>
+        </div>
       </div>
       <div class="d-flex nav-item dropdown w-25 justify-content-end">
         <!-- <a
@@ -69,12 +69,55 @@
         >
       </div>
     </header>
-    <main></main>
+    <main class="container my-4">
+      <div class="row justify-content-center">
+        <div class="col-9">
+          <h1 class="text-uppercase text-light">
+            Ocean of Auctions
+            <span class="text-capitalize text-secondary fs-4">Search ""</span>
+          </h1>
+          <div class="search-results">
+            <div class="card bg-dark py-2">
+              <div id="tags" class="ps-2">
+                <div
+                  class="badge bg-secondary text-primary rounded-pill px-3 py-2"
+                >
+                  hello
+                </div>
+              </div>
+              <div class="ps-2 mt-2">
+                <a
+                  href="#"
+                  class="d-flex align-items-center text-decoration-none"
+                >
+                  <img
+                    src="./assets/icons/profile-icon.png"
+                    alt="Empty profile picture, as well as dropdown menu"
+                    class="profile-images"
+                  />
+                  <h2 class="h3 ms-2 fs-4">
+                    Name - <span class="text-light">Item</span>
+                  </h2>
+                </a>
+              </div>
+              <div class="listings-images mt-2 w-100">
+                <img src="./assets/images/pearls-ring.jpg" class="w-100" />
+              </div>
+              <div class="listings-descriptions ms-2 mt-2"></div>
+              <div class="text-secondary ms-2 mt-2 d-flex">
+                <div class="bids-count me-1">1 bid(s) -</div>
+                <div class="dates-end">End: 23:59 18/12/2022</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer
-      class="bg-dark d-flex justify-content-between align-items-center py-2 px-4 text-light"
+      class="bg-dark d-flex justify-content-between align-items-center py-2 px-4 text-light mt-auto"
     >
       <div class="fs-6">© Dina Olufsen - 2022</div>
-      <div class="fs-3">🡱</div>
+      <div id="arrowUp" class="fs-3">🡱</div>
     </footer>
     <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
