--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
     <title>Pearls</title>
     <link rel="stylesheet" href="./dist/css/styles.css" />
   </head>
-  <body
-    id="index"
-    class="d-flex flex-column justify-content-between min-vh-100"
-  >
+  <body id="index" class="d-flex flex-column min-vh-100">
     <header class="d-flex navbar bg-dark justify-content-between">
       <div class="row navbar-brand align-items-center mx-0 w-75">
         <a
@@ -72,9 +69,68 @@
         > -->
       </div>
     </header>
-    <main></main>
+    <main class="container my-4">
+      <div class="row justify-content-center">
+        <div class="col-11 col-md-9">
+          <h1 class="text-uppercase text-light placeholder-glow">
+            Ocean of Auctions
+          </h1>
+          <div class="search-results">
+            <div class="card bg-dark py-2 placeholder-glow">
+              <div class="d-flex justify-content-between">
+                <div id="tags" class="px-2">
+                  <!-- <div
+                    class="badge bg-secondary text-primary text-lowercase rounded-pill px-3 py-2 mb-2"
+                  >
+                    TAGS
+                  </div> -->
+                </div>
+                <div class="owners-options text-light mx-2"></div>
+              </div>
+              <div class="ps-2 d-flex align-items-center">
+                <div class="d-flex align-items-center text-secondary">
+                  <!-- <a
+                    href="#"
+                    class="text-decoration-none d-flex align-items-center"
+                  > -->
+                  <img
+                    id="userImage"
+                    class="profile-images placeholder rounded-circle"
+                  />
+                  <h2 id="userName" class="h3 m-0 ms-2 fs-4 placeholder">
+                    Name
+                  </h2>
+                  <!-- </a> -->
+                </div>
+                <!-- <span class="mx-2 text-light">-</span> -->
+                <!-- make the span below anchor tag and remove ms-2, as well as un-commenting the span above -->
+                <!-- <span class="text-light text-decoration-none fs-4 ms-2">- Item</span> -->
+              </div>
+              <a href="#">
+                <div
+                  class="listings-images mt-2 w-100 overflow-hidden position-relative"
+                >
+                  <img
+                    class="position-absolute bottom-0 placeholder text-secondary"
+                  />
+                </div>
+              </a>
+              <div
+                class="listings-descriptions mx-2 mt-2 text-light placeholder"
+              >
+                Description
+              </div>
+              <div class="text-secondary mx-2 mt-2 d-flex">
+                <div class="bids-count me-1 placeholder">1 bid(s) -</div>
+                <div class="dates-end placeholder">End: 23:59 18/12/2022</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer
-      class="bg-dark d-flex justify-content-between align-items-center py-2 px-4 text-light"
+      class="bg-dark d-flex justify-content-between align-items-center py-2 px-4 text-light mt-auto"
     >
       <div class="fs-6">© Dina Olufsen - 2022</div>
       <div id="arrowUp" class="fs-3">🡱</div>
