added accordion to index and improvved some scss

--- a/listing.html
+++ b/listing.html
@@ -68,7 +68,7 @@
       <div class="row justify-content-center">
         <div class="col-11 col-md-9 placeholder-glow">
           <div class="d-flex">
-            <h1 id="listingName" class="text-uppercase text-light placeholder">
+            <h1 id="listingName" class="text-uppercase placeholder">
               Listing name
             </h1>
             <div id="tags" class="px-2 d-flex justify-content-center mb-2">
@@ -93,7 +93,7 @@
                 <h2 id="userName" class="h3 m-0 ms-2 fs-4 placeholder">Name</h2>
                 <!-- </a> -->
               </div>
-              <div class="owners-options text-light"></div>
+              <div class="owners-options"></div>
             </div>
             <div
               class="listing-image mt-2 w-100 overflow-hidden position-relative"
@@ -103,7 +103,7 @@
                 class="position-absolute bottom-0 placeholder text-secondary"
               />
             </div>
-            <div class="listings-descriptions mx-2 mt-2 text-light placeholder">
+            <div class="listings-descriptions mx-2 mt-2 placeholder">
               Description
             </div>
             <div class="text-secondary mx-2 mt-2 d-flex">
@@ -126,7 +126,7 @@
                     Name
                   </div>
                 </a>
-                <div class="ms-3 text-light">Bid: <span class="bid">100</span><img src="./assets/icons/currency-icon.png" class="currency-icon ms-1"></div>
+                <div class="ms-3">Bid: <span class="bid">100</span><img src="./assets/icons/currency-icon.png" class="currency-icon ms-1"></div>
               </div>
             </div> -->
 
@@ -136,10 +136,10 @@
           </div>
           <div class="mb-5">
             <div class="make-bid">
-              <!-- <h2 class="text-uppercase text-light">Want to make a bid?</h2>
+              <!-- <h2 class="text-uppercase">Want to make a bid?</h2>
               <div class="card bg-dark py-3 px-4">
                 <div id="bidFeedback" class="d-flex justify-content-center text-danger border-danger"></div>
-                <div class="text-light fs-5">Amount</div>
+                <div class="fs-5">Amount</div>
                 <form class="d-flex gap-2">
                   <input id="bidInput" class="bg-secondary search-input form-control mh-100" />
                   <button id="bidBtn" class="btn btn-primary border border-secondary text-secondary py-1 w-75">Send bid</button>
@@ -156,7 +156,7 @@
       </div>
     </main>
     <footer
-      class="bg-dark d-flex justify-content-between align-items-center py-2 px-4 text-light mt-auto"
+      class="bg-dark d-flex justify-content-between align-items-center py-2 px-4 mt-auto"
     >
       <div class="fs-6">© Dina Olufsen - 2022</div>
       <div id="arrowUp" class="fs-3">🡱</div>
