--- a/search.html
+++ b/search.html
@@ -72,7 +72,7 @@
     <main class="container my-4">
       <div class="row justify-content-center">
         <div class="col-11 col-md-9">
-          <h1 class="text-uppercase text-light placeholder-glow">
+          <h1 class="text-uppercase placeholder-glow">
             Ocean of Auctions
             <span class="text-capitalize text-secondary fs-4 placeholder"
               >Search ""</span
@@ -109,7 +109,7 @@
                 </div>
               </a>
               <div
-                class="listings-descriptions mx-2 mt-2 text-light placeholder"
+                class="listings-descriptions mx-2 mt-2 placeholder"
               >
                 Description
               </div>
@@ -123,7 +123,7 @@
       </div>
     </main>
     <footer
-      class="bg-dark d-flex justify-content-between align-items-center py-2 px-4 text-light mt-auto"
+      class="bg-dark d-flex justify-content-between align-items-center py-2 px-4 mt-auto"
     >
       <div class="fs-6">© Dina Olufsen - 2022</div>
       <div id="arrowUp" class="fs-3">🡱</div>
