--- a/signup.html
+++ b/signup.html
@@ -73,14 +73,14 @@
       <div class="container position-relative mb-5">
         <div class="row d-flex justify-content-center mt-2">
           <form
-            class="col-11 col-md-8 col-lg-6 card bg-dark text-light p-5 mh-100"
+            class="col-11 col-md-8 col-lg-6 card bg-dark p-5 mh-100"
           >
             <h1 class="fs-2 text-uppercase mb-4">Sign up</h1>
             <label class="fs-5" for="nameInput">Username</label>
             <input
               id="nameInput"
               type="email"
-              class="bg-secondary p-1 rounded form-control"
+              class="bg-secondary p-1 rounded form-control text-dark"
             />
             <div id="nameFeedback" class="text-secondary">
               Please enter an unused username
@@ -89,7 +89,7 @@
             <input
               id="emailInput"
               type="email"
-              class="bg-secondary p-1 rounded form-control"
+              class="bg-secondary p-1 rounded form-control text-dark"
             />
             <div id="mailFeedback" class="text-secondary">
               Please enter a valid student Noroff E-mail <br />(ending in
@@ -100,7 +100,7 @@
             <input
               id="passwordInput"
               type="password"
-              class="bg-secondary p-1 rounded form-control"
+              class="bg-secondary p-1 rounded form-control text-dark"
             />
             <div id="passwordFeedback" class="text-secondary">
               Please enter a valid password <br />(containing at least 1 capital
