--- a/welcome.html
+++ b/welcome.html
@@ -84,9 +84,9 @@
         id="welcome-text"
         class="col-12 col-md-6 text-end h-75 me-5 ps-4 d-flex flex-column justify-content-evenly"
       >
-        <h1 class="text-light text-uppercase">Welcome to Pearls</h1>
+        <h1 class="text-uppercase">Welcome to Pearls</h1>
         <div class="d-flex flex-column ms-auto w-75 align-items-end">
-          <p class="text-light fs-4">
+          <p class="fs-4">
             Search for Pearls and other hidden Treasures in the big Ocean of
             Auctions
           </p>
@@ -109,7 +109,7 @@
           id="welcome-login"
           class="d-flex flex-column align-items-center ms-auto h-25 justify-content-end"
         >
-          <h2 class="text-light text-uppercase">
+          <h2 class="text-uppercase">
             Log in
             <span class="h3 text-capitalize fs-5 text-secondary"
               >To make bids and listings</span
