--- a/index.html
+++ b/index.html
@@ -75,6 +75,52 @@
           <h1 class="text-uppercase text-light placeholder-glow">
             Ocean of Auctions
           </h1>
+          <div class="accordion mb-4" id="accordionAuction">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingAuction">
+                <button class="accordion-button text-uppercase fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Make an auction
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionAuction">
+                <div class="accordion-body">
+                  <form
+                    class="row flex-column flex-nowrap mh-100"
+                  >
+                    <div class="col-12 col-sm-10 col-md-8">
+                      <label class="" for="titleInput">Title*</label>
+                      <input
+                        id="titleInput"
+                        class="bg-secondary p-1 rounded form-control text-dark"
+                      />
+                    </div>
+                    <div class="col-10 col-sm-7 col-md-6 col-lg-4">
+                      <label class="mt-3" for="dateInput">Date and Time</label>
+                      <input
+                        id="dateInput"
+                        type="datetime-local"
+                        class="bg-secondary p-1 rounded form-control text-dark"
+                      />
+                    </div>
+                    <div>
+                      <label class="mt-3" for="descInput">Description</label>
+                      <textarea
+                        id="descInput"
+                        class="bg-secondary p-1 rounded form-control text-dark"
+                      ></textarea>
+                    </div>
+                    <div>                    
+                      <button
+                      class="btn btn-primary text-secondary border border-secondary align-self-center mt-3 px-5"
+                      >
+                        List item
+                      </button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="search-results">
             <div class="card bg-dark py-2 placeholder-glow">
               <div class="d-flex justify-content-between">
@@ -85,7 +131,7 @@
                     TAGS
                   </div> -->
                 </div>
-                <div class="owners-options text-light mx-2"></div>
+                <div class="owners-options mx-2"></div>
               </div>
               <div class="ps-2 d-flex align-items-center">
                 <div class="d-flex align-items-center text-secondary">
@@ -116,7 +162,7 @@
                 </div>
               </a>
               <div
-                class="listings-descriptions mx-2 mt-2 text-light placeholder"
+                class="listings-descriptions mx-2 mt-2 placeholder"
               >
                 Description
               </div>
@@ -130,7 +176,7 @@
       </div>
     </main>
     <footer
-      class="bg-dark d-flex justify-content-between align-items-center py-2 px-4 text-light mt-auto"
+      class="bg-dark d-flex justify-content-between align-items-center py-2 px-4 mt-auto"
     >
       <div class="fs-6">© Dina Olufsen - 2022</div>
       <div id="arrowUp" class="fs-3">🡱</div>
