--- a/profile.html
+++ b/profile.html
@@ -71,7 +71,7 @@
     </header>
     <main></main>
     <footer
-      class="bg-dark d-flex justify-content-between align-items-center py-2 px-4 text-light"
+      class="bg-dark d-flex justify-content-between align-items-center py-2 px-4"
     >
       <div class="fs-6">© Dina Olufsen - 2022</div>
       <div id="arrowUp" class="fs-3">🡱</div>
