--- a/search.html
+++ b/search.html
@@ -35,7 +35,7 @@
             />
             <input
               id="searchInput"
-              class="bg-secondary search-input form-control"
+              class="bg-secondary text-dark search-input form-control"
             />
           </form>
         </div>
@@ -108,9 +108,7 @@
                   />
                 </div>
               </a>
-              <div
-                class="listings-descriptions mx-2 mt-2 placeholder"
-              >
+              <div class="listings-descriptions mx-2 mt-2 placeholder">
                 Description
               </div>
               <div class="text-secondary mx-2 mt-2 d-flex">
