--- a/welcome.html
+++ b/welcome.html
@@ -101,7 +101,7 @@
             />
             <input
               id="searchInput"
-              class="bg-secondary search-input form-control"
+              class="bg-secondary text-dark search-input form-control"
             />
           </form>
         </div>
