--- a/listing.html
+++ b/listing.html
@@ -35,7 +35,7 @@
             />
             <input
               id="searchInput"
-              class="bg-secondary search-input form-control"
+              class="bg-secondary text-dark search-input form-control"
             />
           </form>
         </div>
