--- a/login.html
+++ b/login.html
@@ -26,19 +26,6 @@
             >Pearls</span
           >
         </a>
-        <!-- <div class="col-8 col-sm-6 col-md-5 col-lg-4 col-xxl-3">
-            <form
-              class="d-flex bg-secondary rounded h-100 p-1 align-items-center"
-              onsubmit=""
-            >
-              <img
-                src="./assets/icons/search-icon.png"
-                id="header-search-icon"
-                class="search-icon p-0"
-              />
-              <input class="bg-secondary search-input form-control" />
-            </form>
-          </div> -->
       </div>
       <div class="d-flex nav-item dropdown w-50 justify-content-end">
         <!-- <a
@@ -72,9 +59,7 @@
     <main>
       <div class="container position-relative mb-5">
         <div class="row d-flex justify-content-center mt-2">
-          <form
-            class="col-11 col-md-8 col-lg-6 card bg-dark p-5 mh-100"
-          >
+          <form class="col-11 col-md-8 col-lg-6 card bg-dark p-5 mh-100">
             <h1 class="fs-2 text-uppercase mb-4">Log in</h1>
             <label class="fs-5" for="emailInput">E-mail</label>
             <input
