--- a/profile.html
+++ b/profile.html
@@ -36,42 +36,131 @@
                 id="header-search-icon"
                 class="search-icon p-0"
               />
-              <input id="searchInput" class="bg-secondary search-input form-control" />
+              <input id="searchInput" class="bg-secondary text-dark search-input form-control" />
             </form>
           </div> -->
       </div>
       <div class="d-flex nav-item dropdown w-25 justify-content-end">
-        <!-- <a
-            class="nav-link dropdown-toggle me-3"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-haspopup="true"
-            aria-expanded="false"
-          >
-            <img
-              src="./assets/icons/profile-icon.png"
-              alt="Empty profile picture, as well as dropdown menu"
-              id="header-profile-icon"
-            />
-          </a>
-          <ul
-            class="dropdown-menu dropdown-menu-end"
-            aria-labelledby="dropdownAccountButton"
-          >
-            <li><a class="dropdown-item" href="/profile.html">Profile</a></li>
-            <li><a class="dropdown-item" href="">Log Out</a></li>
-          </ul> -->
         <a
-          class="btn btn-primary me-2 text-secondary border border-secondary"
-          href="./login.html"
-          >Log in</a
+          class="nav-link dropdown-toggle me-3"
+          href="#"
+          role="button"
+          data-bs-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
         >
+          <img
+            src="./assets/icons/profile-icon.png"
+            alt="Empty profile picture, as well as dropdown menu"
+            id="header-profile-icon"
+          />
+        </a>
+        <ul
+          class="dropdown-menu dropdown-menu-end"
+          aria-labelledby="dropdownAccountButton"
+        >
+          <li><a class="dropdown-item" href="/profile.html">Profile</a></li>
+          <li><a class="dropdown-item" href="">Log Out</a></li>
+        </ul>
       </div>
     </header>
-    <main></main>
+    <main class="container-fluid mt-5">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-11 col-xl-9">
+          <div class="row justify-content-center profile-wrap mb-5">
+            <div
+              id="profileBorder"
+              class="col-12 col-md-3 px-0 me-4 border-end border-3 border-dark min-h-100 placeholder-glow"
+            >
+              <div
+                id="profileCard"
+                class="p-3 m-0 bg-dark rounded-start d-flex align-items-center"
+              >
+                <div>
+                  <img
+                    id="profileImage"
+                    class="placeholder rounded-circle bg-secondary"
+                  />
+                </div>
+                <div class="ms-2 d-flex flex-column">
+                  <h1
+                    id="profileName"
+                    class="fs-4 text-uppercase m-0 placeholder"
+                  >
+                    Name
+                  </h1>
+                  <div class="text-secondary">
+                    <div class="d-flex align-items-center placeholder">
+                      Credits: <span id="credits">0</span>
+                      <!-- <img src="./assets/icons/currency-icon.png" class="currency-icon ms-1"> -->
+                    </div>
+                  </div>
+                  <div class="text-secondary placeholder">
+                    Listings: <span id="listings"></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-8">
+              <h2 class="text-uppercase">Listings</h2>
+              <div class="posts-container">
+                <div class="card bg-dark py-2 placeholder-glow">
+                  <div class="d-flex justify-content-between">
+                    <div id="tags" class="px-2">
+                      <!-- <div
+                        class="badge bg-secondary text-primary text-lowercase rounded-pill px-3 py-2 mb-2"
+                      >
+                        TAGS
+                      </div> -->
+                    </div>
+                    <div class="owners-options mx-2"></div>
+                  </div>
+                  <div class="ps-2 d-flex align-items-center">
+                    <div class="d-flex align-items-center text-secondary">
+                      <!-- <a
+                        href="#"
+                        class="text-decoration-none d-flex align-items-center"
+                      > -->
+                      <img
+                        id="userImage"
+                        class="profile-images placeholder rounded-circle"
+                      />
+                      <h2 id="userName" class="h3 m-0 ms-2 fs-4 placeholder">
+                        Name
+                      </h2>
+                      <!-- </a> -->
+                    </div>
+                    <!-- <span class="mx-2 text-light">-</span> -->
+                    <!-- make the span below anchor tag and remove ms-2, as well as un-commenting the span above -->
+                    <!-- <span class="text-light text-decoration-none fs-4 ms-2">- Item</span> -->
+                  </div>
+                  <a href="#">
+                    <div
+                      class="listings-images mt-2 w-100 overflow-hidden position-relative"
+                    >
+                      <img
+                        class="position-absolute bottom-0 placeholder text-secondary"
+                      />
+                    </div>
+                  </a>
+                  <div class="listings-descriptions mx-2 mt-2 placeholder">
+                    Description
+                  </div>
+                  <div class="text-secondary mx-2 mt-2 d-flex">
+                    <div class="bids-count me-1 placeholder">1 bid(s) -</div>
+                    <div class="dates-end placeholder">
+                      End: 23:59 18/12/2022
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer
-      class="bg-dark d-flex justify-content-between align-items-center py-2 px-4"
+      class="bg-dark d-flex justify-content-between align-items-center py-2 px-4 mt-auto"
     >
       <div class="fs-6">© Dina Olufsen - 2022</div>
       <div id="arrowUp" class="fs-3">🡱</div>
