--- a/login.html
+++ b/login.html
@@ -58,16 +58,17 @@
     </header>
     <main>
       <div class="container position-relative mb-5">
-        <div class="row d-flex justify-content-center mt-2">
+        <div class="row d-flex justify-content-center mt-4">
           <form class="col-11 col-md-8 col-lg-6 card bg-dark p-5 mh-100">
-            <h1 class="fs-2 text-uppercase mb-4">Log in</h1>
-            <label class="fs-5" for="emailInput">E-mail</label>
+            <h1 class="fs-2 text-uppercase mb-3">Log in</h1>
+            <div class="errorFeedback text-danger text-center rounded"></div>
+            <label class="fs-5 mt-2" for="emailInput">E-mail</label>
             <input
               id="emailInput"
               type="email"
               class="bg-secondary p-1 rounded form-control text-dark"
             />
-            <div id="mailFeedback" class="text-secondary">
+            <div id="emailFeedback">
               Please enter your e-mail address
             </div>
             <label class="fs-5 mt-3" for="passwordInput">Password</label>
@@ -76,7 +77,7 @@
               type="password"
               class="bg-secondary p-1 rounded form-control text-dark"
             />
-            <div id="passwordFeedback" class="text-secondary">
+            <div id="passwordFeedback">
               Please enter your password
             </div>
             <div class="form-check mt-3">
@@ -92,6 +93,7 @@
               >
             </div>
             <button
+              type="submit"
               class="btn btn-primary text-secondary border border-secondary align-self-center mt-3 px-5"
             >
               Log in
@@ -105,8 +107,9 @@
       </div>
       <div id="bg-image" class="position-absolute top-0 end-0"></div>
     </main>
-    <footer class="mt-5"></footer>
+    <footer class="mt-auto"></footer>
     <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="module" src="./src/js/login.js"></script>
   </body>
 </html>
