fetched and displayed listings to index page

--- a/index.html
+++ b/index.html
@@ -196,7 +196,6 @@
                 <!-- make the span below anchor tag and remove ms-2, as well as un-commenting the span above -->
                 <!-- <span class="text-light text-decoration-none fs-4 ms-2">- Item</span> -->
               </div>
-              <a href="#">
                 <div
                   class="listings-images mt-2 w-100 overflow-hidden position-relative"
                 >
@@ -204,7 +203,7 @@
                     class="position-absolute bottom-0 placeholder text-secondary"
                   />
                 </div>
-              </a>
+
               <div class="listings-descriptions mx-2 mt-2 placeholder">
                 Description
               </div>
@@ -225,6 +224,6 @@
     </footer>
     <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="./src/js/index.js"></script>
+    <script type="module" src="./src/js/index.js"></script>
   </body>
 </html>
