--- a/index.html
+++ b/index.html
@@ -158,12 +158,17 @@
             </div>
           </div>
           <div class="row mb-2 mx-0 justify-content-end">
-            <select class="rounded bg-dark border border-dark text-light px-3 py-1 col-4 col-sm-3" id="filterSelect">
+            <select
+              class="rounded bg-dark border border-dark text-light px-3 py-1 col-4 col-sm-3"
+              id="filterSelect"
+            >
               <option value="default">Filter...</option>
               <option value="following" id="filterFollowing">Following</option>
-              <option value="newest" id="filterByLatestPosts">Latest posts</option>
+              <option value="newest" id="filterByLatestPosts">
+                Latest posts
+              </option>
               <option value="oldest" id="filterByOldest">Oldest posts</option>
-          </select>
+            </select>
           </div>
           <div class="posts-container">
             <div class="card bg-dark py-2 placeholder-glow">
@@ -196,13 +201,13 @@
                 <!-- make the span below anchor tag and remove ms-2, as well as un-commenting the span above -->
                 <!-- <span class="text-light text-decoration-none fs-4 ms-2">- Item</span> -->
               </div>
-                <div
-                  class="listings-images mt-2 w-100 overflow-hidden position-relative"
-                >
-                  <img
-                    class="position-absolute bottom-0 placeholder text-secondary"
-                  />
-                </div>
+              <div
+                class="listings-images mt-2 w-100 overflow-hidden position-relative"
+              >
+                <img
+                  class="position-absolute bottom-0 placeholder text-secondary"
+                />
+              </div>
 
               <div class="listings-descriptions mx-2 mt-2 placeholder">
                 Description
