--- a/login.html
+++ b/login.html
@@ -68,18 +68,14 @@
               type="email"
               class="bg-secondary p-1 rounded form-control text-dark"
             />
-            <div id="emailFeedback">
-              Please enter your e-mail address
-            </div>
+            <div id="emailFeedback">Please enter your e-mail address</div>
             <label class="fs-5 mt-3" for="passwordInput">Password</label>
             <input
               id="passwordInput"
               type="password"
               class="bg-secondary p-1 rounded form-control text-dark"
             />
-            <div id="passwordFeedback">
-              Please enter your password
-            </div>
+            <div id="passwordFeedback">Please enter your password</div>
             <div class="form-check mt-3">
               <input
                 id="rememberCheck"
