--- a/signup.html
+++ b/signup.html
@@ -69,7 +69,7 @@
               class="bg-secondary p-1 rounded form-control text-dark"
             />
             <div id="nameFeedback">
-              Please enter an unused username <br>
+              Please enter an unused username <br />
               (At least 4 characters)
             </div>
             <label class="fs-5 mt-3" for="emailInput">E-mail</label>
@@ -91,10 +91,10 @@
               class="bg-secondary p-1 rounded form-control text-dark"
             />
             <div id="passwordFeedback">
-              Please enter a valid password <br />(containing 8-20 characters, <br>at least 1 capital
-              letter and 1 number)
+              Please enter a valid password <br />(containing 8-20 characters,
+              <br />at least 1 capital letter and 1 number)
             </div>
-            <button 
+            <button
               type="submit"
               class="btn btn-primary text-secondary border border-secondary align-self-center mt-3 px-5"
             >
